crates/strider-analyze/tests/snapshots/v2__arm__calling_convention__sink16.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "3" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "3" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "8" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0x28:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "11" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v12" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v12" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "13" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "13" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "15" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "16" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x10000002c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "3" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "20" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "21" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x100000024:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "25" -> "24" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "25" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x100000020:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "27" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="arg[11] ← ram[sp + 28]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "27" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "29" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="arg[10] ← ram[sp + 24]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "29" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "31" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="arg[9] ← ram[sp + 20]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "31" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "33" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="arg[8] ← ram[sp + 16]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "33" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "35" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="arg[7] ← ram[sp + 12]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "35" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "37" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="arg[6] ← ram[sp + 8]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "37" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "39" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="arg[5] ← ram[sp + 4]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "39" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "41" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="arg[4] ← ram[sp + 0]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "41" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "43" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="arg[3] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "43" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "45" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="arg[2] ← r2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "45" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "47" -> "45" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "45" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "47" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "7" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v49" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v49" -> "11" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "50" -> "11" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "50" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
